# fhir-sdc

./: .env.tpl  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  docker-compose.tests.yaml  env.aidbox.tests  env.fhir-converter.tests  env.sdc.tests  env_tests  initBundle.json  main.py  pyproject.toml  run_test.sh
.github/workflows/: build-and-test.yml  github-actions.yml  push.yml  release.yml  test.yml
app/: __init__.py  cached_fhirpath.py  config.py  fce.py  fhirdate.py  gcs.py  manifest.py  notification.py  operations.py  periodic_tasks.py  sdk.py  settings.py  subscriptions.py  utils.py
app/access_policy/: __init__.py
app/aidbox/: __init__.py  manifest.py  operations.py  sdk.py  settings.py  utils.py
app/contrib/: aidboxpy_ext.py  db_ext.py  google_cloud.py  sdk_ext.py  utils.py
app/converter/: __init__.py  aidbox.py  fce_to_fhir.py  fhir_to_fce.py  utils.py
app/fhir_server/: __init__.py  operations.py  settings.py
app/operations/: __init__.py  assemble.py  constraint_check.py  context.py  exception.py  extract.py  populate.py  source_queries.py  utils.py
app/sdc/: __init__.py  assemble.py  constraint_check.py  context.py  exception.py  extract.py  getters.py  populate.py  source_queries.py  typings.py  utils.py
app/test/: utils.py
chart/: deploy.sh
chart/templates/: deployment.yaml  ingress.yaml
requirements/: base.txt  dev.txt  test.txt
tests/: conftest.py  factories.py  test_base.py  test_sdc.py  test_utils.py  utils.py
tests/aidbox/: test_multitenant.py
tests/converter/: test_fce_to_fhir.py  test_fhir_to_fce.py
tests/sdc/: test_fce.py  (+11 more)
tests_zen_project/: zen-package.edn
(+71 files in other folders)
