[project]
name = "fhir-sdc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "python-dateutil==2.8.2",
  "funcy==2.0",
  "gunicorn==22.0.0",
  "aiohttp>=3.8.3",
  "sentry-sdk==1.45.1",
  "aiocontextvars==0.2.2",
  "coloredlogs>=15.0.1",
  "aidbox-python-sdk>=0.1.16",
  "fhirpathpy>=2.0.3",
  "sqlalchemy>=1.4.44",
  "fhirpy~=2.2.0",
  "aiohttp-cors~=0.7.0",
  "simplejson",
  "fpml>=0.2.0",
  "pytest-aiohttp==1.1.0",
  "pytest-cov==6.2.1",
  "pytest~=8.4.1",
  "factory-boy==2.12.0",
  "pytest-factoryboy==2.0.3",
  "pytest-mock==3.10.0",
  "pytest-asyncio~=1.1.0",
]

[dependency-groups]
dev = [
  "jedi>=0.18.0",
  "json-rpc>=1.13.0",
  "service-factory>=0.1.6",
  "black",
  "autohooks",
  "autohooks-plugin-black",
  "autohooks-plugin-isort",
  "isort",
  "autoflake",
  "importmagic",
  "epc",
  "ipython",
  "pylint",
]

[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
(
  /(
    | \.git
    | \.pytest_cache
    | \.venv
    | htmlcov
    | locales
    | resources
    | requirements
    | embed
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 100
default_section = "THIRDPARTY"
known_first_party = ["app", "tests", "sdc"]

[tool.autohooks]
mode = "uv"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.isort"]

[tool.pylint.FORMAT]
max-line-length = 100

[tool.pylint.'MESSAGES CONTROL']
disable = ["C0114", "C0116"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"
addopts = "--color=yes"
asyncio_mode = "auto"
